--- a/ch_qt/CMakeLists.txt
+++ b/ch_qt/CMakeLists.txt
@@ -1,2 +1,2 @@
 #subdirs(qt1 qt2 qt3 qt4 qt5 qt6 qt7 qt8 beam_app calculator drawing1 plotting)
-subdirs(qt1 qt2 qt3 qt4 qt5 qt6 qt7 qt8 beam_app)
+subdirs(qt0 qt1 qt2 qt3 qt4 qt5 qt6 qt7 qt8 beam_app editor_app)
