More work on styling the editor

--- a/ch_qt/editor_app/CMakeLists.txt
+++ b/ch_qt/editor_app/CMakeLists.txt
@@ -23,6 +23,8 @@ else()
     qt_standard_project_setup()
 
     add_executable(editor_app
+        editor_app_res.qrc
+        mainwindow.h
         mainwindow.cpp
         main.cpp
     )
