Work on the Qt chapter.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -70,5 +70,6 @@
         "typeinfo": "cpp",
         "variant": "cpp"
     },
-    "esbonio.server.enabled": false
+    "esbonio.server.enabled": false,
+    "iis.configDir": ""
 }
