--- a/ch_qt/list_combo/CMakeLists.txt
+++ b/ch_qt/list_combo/CMakeLists.txt
@@ -10,39 +10,39 @@ set(CMAKE_INCLUDE_CURRENT_DIR ON)
 if (LINUX)
     find_package(Qt5 COMPONENTS Widgets REQUIRED)
 
-    add_executable(buttons
+    add_executable(list_combo
         mainwindow.ui
         mainwindow.cpp
         main.cpp
     )
 
-    target_link_libraries(radio_checkbox PRIVATE Qt5::Widgets Qt5::Core Qt5::Gui)
+    target_link_libraries(list_combo PRIVATE Qt5::Widgets Qt5::Core Qt5::Gui)
 else()
     find_package(Qt6 REQUIRED COMPONENTS Core Widgets Gui)
 
     qt_standard_project_setup()
 
-    add_executable(radio_checkbox
+    add_executable(list_combo
         mainwindow.h
         mainwindow.cpp
         main.cpp
     )
-    target_include_directories(radio_checkbox PRIVATE ${EXPRTK_INCLUDE_DIRS})
-    target_link_libraries(radio_checkbox PRIVATE Qt6::Widgets Qt6::Core Qt6::Gui)
+    target_include_directories(list_combo PRIVATE ${EXPRTK_INCLUDE_DIRS})
+    target_link_libraries(list_combo PRIVATE Qt6::Widgets Qt6::Core Qt6::Gui)
 
-    set_target_properties(radio_checkbox PROPERTIES
+    set_target_properties(list_combo PROPERTIES
         WIN32_EXECUTABLE ON
         MACOSX_BUNDLE ON
     )
 
-    add_custom_command(TARGET radio_checkbox POST_BUILD 
+    add_custom_command(TARGET list_combo POST_BUILD 
         COMMAND Qt6::windeployqt
-        ARGS $<TARGET_FILE:radio_checkbox>
+        ARGS $<TARGET_FILE:list_combo>
     )
 endif()
 
 set_target_properties(
-    radio_checkbox
+    list_combo
     PROPERTIES
     FOLDER "ch_qt"
 )
