--- a/ch_concurrency/CMakeLists.txt
+++ b/ch_concurrency/CMakeLists.txt
@@ -5,6 +5,7 @@ add_executable(threads1 threads1.cpp)
 add_executable(threads2 threads2.cpp)
 add_executable(threads3 threads3.cpp)
 add_executable(threads4 threads4.cpp)
+add_executable(threads5 threads5.cpp)
 add_executable(async1 async1.cpp)
 
 
@@ -14,6 +15,7 @@ set_target_properties(
     threads2
     threads3
     threads4
+    threads5
     async1
     PROPERTIES
     FOLDER "ch_concurrency"
