--- a/ch_qt/qt0/CMakeLists.txt
+++ b/ch_qt/qt0/CMakeLists.txt
@@ -1,4 +1,4 @@
-set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 set(CMAKE_AUTOMOC ON)
@@ -10,13 +10,13 @@ set(CMAKE_INCLUDE_CURRENT_DIR ON)
 if (LINUX)
     find_package(Qt5 COMPONENTS Widgets REQUIRED)
 
-    add_executable(qt1
-        mainwindow.ui
+    add_executable(qt0
+        mainwindow.h
         mainwindow.cpp
         main.cpp
     )
 
-    target_link_libraries(qt1 PRIVATE Qt5::Widgets Qt5::Core Qt5::Gui)
+    target_link_libraries(qt0 PRIVATE Qt5::Widgets Qt5::Core Qt5::Gui)
 else()
     find_package(Qt6 REQUIRED COMPONENTS Core Widgets Gui)
 
