--- a/ch_qt/sliders_spin/CMakeLists.txt
+++ b/ch_qt/sliders_spin/CMakeLists.txt
@@ -11,7 +11,7 @@ if (LINUX)
     find_package(Qt5 COMPONENTS Widgets REQUIRED)
 
     add_executable(sliders_spin
-        mainwindow.ui
+        mainwindow.h
         mainwindow.cpp
         main.cpp
     )
