--- a/ch_concurrency/CMakeLists.txt
+++ b/ch_concurrency/CMakeLists.txt
@@ -2,6 +2,7 @@ set(CMAKE_CXX_STANDARD 23)
 
 add_executable(threads0 threads0.cpp)
 add_executable(threads1 threads1.cpp)
+add_executable(threads1_algo threads1_algo.cpp)
 add_executable(threads2 threads2.cpp)
 add_executable(threads3 threads3.cpp)
 add_executable(threads4 threads4.cpp)
@@ -15,6 +16,7 @@ add_executable(halo_eigen1 halo_eigen1.cpp)
 set_target_properties(
     threads0
     threads1
+    threads1_algo
     threads2
     threads3
     threads4
