--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -48,7 +48,8 @@ project(cpp_course C CXX)
 option(BUILD_QT_EXAMPLES "Build Qt examples" ON)
 option(BUILD_VTK_EXAMPLES "Build VTK examples" OFF)
 option(BUILD_EIGEN_EXAMPLES "Build Eigen examples" ON)
-option(BUILD_MIXED_LANG_EXAMPLES "Build mixed language examples" OFF)
+option(BUILD_MIXED_LANG_EXAMPLES "Build mixed language examples" ON)
+option(BUILD_PYBIND11_EXAMPLES "Build pybind11 Python binding examples" ON)
 
 set( CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/bin )
 
@@ -104,3 +105,4 @@ add_subdirectory(ch_strings)
 add_subdirectory(ch_variables)
 add_subdirectory(ch_vector_and_lists)
 add_subdirectory(ch_concurrency)
+add_subdirectory(ch_mixed_language)
