--- a/ch_matrices/CMakeLists.txt
+++ b/ch_matrices/CMakeLists.txt
@@ -1,3 +1,5 @@
+find_package(OpenMP)
+
 add_executable(matrix1_eig matrix1_eig.cpp)
 target_link_libraries(matrix1_eig PRIVATE Eigen3::Eigen)
 
@@ -23,7 +25,7 @@ add_executable(matrix_slicing_1 matrix_slicing_1.cpp)
 target_link_libraries(matrix_slicing_1 PRIVATE Eigen3::Eigen)
 
 add_executable(matrix_solver_1 matrix_solver_1.cpp)
-target_link_libraries(matrix_slicing_1 PRIVATE Eigen3::Eigen)
+target_link_libraries(matrix_solver_1 PRIVATE Eigen3::Eigen)
 
 add_executable(matrix_solver_2 matrix_solver_2.cpp)
 target_link_libraries(matrix_solver_2 PRIVATE Eigen3::Eigen)
@@ -37,13 +39,29 @@ target_link_libraries(matrix_solver_4 PRIVATE Eigen3::Eigen)
 add_executable(eigen_c_arrays1 eigen_c_arrays1.cpp)
 target_link_libraries(eigen_c_arrays1 PRIVATE Eigen3::Eigen)
 
-add_executable(matrix_openmp_1 matrix_openmp_1.cpp)
-target_link_libraries(matrix_openmp_1 PRIVATE Eigen3::Eigen)
 
-add_executable(matrix_openmp_2 matrix_openmp_2.cpp)
-target_link_libraries(matrix_openmp_2 PRIVATE Eigen3::Eigen)
+if(OpenMP_CXX_FOUND)
+    # Build the OpenMP examples when OpenMP is available
+    add_executable(matrix_openmp_1 matrix_openmp_1.cpp)
+    target_link_libraries(matrix_openmp_1 PRIVATE Eigen3::Eigen OpenMP::OpenMP_CXX)
 
-set_target_properties(
+    add_executable(matrix_openmp_2 matrix_openmp_2.cpp)
+    target_link_libraries(matrix_openmp_2 PRIVATE Eigen3::Eigen OpenMP::OpenMP_CXX)
+
+    # Suppress Eigen deprecation warnings coming from system headers on compilers
+    # that warn about deprecated std:: features (e.g. AppleClang libc++).
+    if (CMAKE_CXX_COMPILER_ID MATCHES "Clang" OR CMAKE_CXX_COMPILER_ID MATCHES "AppleClang" OR CMAKE_CXX_COMPILER_ID MATCHES "GNU")
+        target_compile_options(matrix_openmp_1 PRIVATE -Wno-deprecated-declarations)
+        target_compile_options(matrix_openmp_2 PRIVATE -Wno-deprecated-declarations)
+    elseif(MSVC)
+        target_compile_options(matrix_openmp_1 PRIVATE /wd4996)
+        target_compile_options(matrix_openmp_2 PRIVATE /wd4996)
+    endif()
+else()
+    message(WARNING "OpenMP not found — skipping matrix_openmp examples. Install libomp (Homebrew: brew install libomp) to enable them.")
+endif()
+
+set(MATRIX_TARGETS
     matrix1_eig
     matrix2_eig
     matrix3_eig
@@ -57,8 +75,13 @@ set_target_properties(
     matrix_solver_3
     matrix_solver_4
     eigen_c_arrays1
-    matrix_openmp_1
-    matrix_openmp_2
-    PROPERTIES
-    FOLDER "ch_matrices"
 )
+
+if (TARGET matrix_openmp_1)
+    list(APPEND MATRIX_TARGETS matrix_openmp_1)
+endif()
+if (TARGET matrix_openmp_2)
+    list(APPEND MATRIX_TARGETS matrix_openmp_2)
+endif()
+
+set_target_properties(${MATRIX_TARGETS} PROPERTIES FOLDER "ch_matrices")
