--- a/ch_qt/radio_checkbox/CMakeLists.txt
+++ b/ch_qt/radio_checkbox/CMakeLists.txt
@@ -7,34 +7,24 @@ set(CMAKE_AUTOUIC ON)
 
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 
-if (LINUX)
-    find_package(Qt5 COMPONENTS Widgets REQUIRED)
+find_package(Qt6 REQUIRED COMPONENTS Core Widgets Gui)
 
-    add_executable(radio_checkbox
-        mainwindow.h
-        mainwindow.cpp
-        main.cpp
-    )
+qt_standard_project_setup()
 
-    target_link_libraries(radio_checkbox PRIVATE Qt5::Widgets Qt5::Core Qt5::Gui)
-else()
-    find_package(Qt6 REQUIRED COMPONENTS Core Widgets Gui)
+add_executable(radio_checkbox
+    mainwindow.h
+    mainwindow.cpp
+    main.cpp
+)
+target_include_directories(radio_checkbox PRIVATE ${EXPRTK_INCLUDE_DIRS})
+target_link_libraries(radio_checkbox PRIVATE Qt6::Widgets Qt6::Core Qt6::Gui)
 
-    qt_standard_project_setup()
+set_target_properties(radio_checkbox PROPERTIES
+    WIN32_EXECUTABLE ON
+    MACOSX_BUNDLE ON
+)
 
-    add_executable(radio_checkbox
-        mainwindow.h
-        mainwindow.cpp
-        main.cpp
-    )
-    target_include_directories(radio_checkbox PRIVATE ${EXPRTK_INCLUDE_DIRS})
-    target_link_libraries(radio_checkbox PRIVATE Qt6::Widgets Qt6::Core Qt6::Gui)
-
-    set_target_properties(radio_checkbox PROPERTIES
-        WIN32_EXECUTABLE ON
-        MACOSX_BUNDLE ON
-    )
-
+if(WIN32)
     add_custom_command(TARGET radio_checkbox POST_BUILD 
         COMMAND Qt6::windeployqt
         ARGS $<TARGET_FILE:radio_checkbox>
