--- a/ch_qt/buttons/CMakeLists.txt
+++ b/ch_qt/buttons/CMakeLists.txt
@@ -7,34 +7,24 @@ set(CMAKE_AUTOUIC ON)
 
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 
-if (LINUX)
-    find_package(Qt5 COMPONENTS Widgets REQUIRED)
+find_package(Qt6 REQUIRED COMPONENTS Core Widgets Gui)
 
-    add_executable(buttons
-        mainwindow.h
-        mainwindow.cpp
-        main.cpp
-    )
+qt_standard_project_setup()
 
-    target_link_libraries(buttons PRIVATE Qt5::Widgets Qt5::Core Qt5::Gui)
-else()
-    find_package(Qt6 REQUIRED COMPONENTS Core Widgets Gui)
+add_executable(buttons
+    mainwindow.h
+    mainwindow.cpp
+    main.cpp
+)
+target_include_directories(buttons PRIVATE ${EXPRTK_INCLUDE_DIRS})
+target_link_libraries(buttons PRIVATE Qt6::Widgets Qt6::Core Qt6::Gui)
 
-    qt_standard_project_setup()
+set_target_properties(buttons PROPERTIES
+    WIN32_EXECUTABLE ON
+    MACOSX_BUNDLE ON
+)
 
-    add_executable(buttons
-        mainwindow.h
-        mainwindow.cpp
-        main.cpp
-    )
-    target_include_directories(buttons PRIVATE ${EXPRTK_INCLUDE_DIRS})
-    target_link_libraries(buttons PRIVATE Qt6::Widgets Qt6::Core Qt6::Gui)
-
-    set_target_properties(buttons PROPERTIES
-        WIN32_EXECUTABLE ON
-        MACOSX_BUNDLE ON
-    )
-
+if(WIN32)
     add_custom_command(TARGET buttons POST_BUILD 
         COMMAND Qt6::windeployqt
         ARGS $<TARGET_FILE:buttons>
