--- a/ch_qt/calculator/CMakeLists.txt
+++ b/ch_qt/calculator/CMakeLists.txt
@@ -7,33 +7,23 @@ set(CMAKE_AUTOUIC ON)
 
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 
-if (LINUX)
-    find_package(Qt5 COMPONENTS Widgets REQUIRED)
+find_package(Qt6 REQUIRED COMPONENTS Core Widgets Gui)
 
-    add_executable(calculator
-        mainwindow.ui
-        mainwindow.cpp
-        main.cpp
-    )
+qt_standard_project_setup()
 
-    target_link_libraries(calculator PRIVATE Qt5::Widgets)
-else()
-    find_package(Qt6 REQUIRED COMPONENTS Core Widgets Gui)
+qt_add_executable(calculator
+    mainwindow.ui
+    mainwindow.cpp
+    main.cpp
+)
+target_link_libraries(calculator PRIVATE Qt6::Widgets Qt6::Core Qt6::Gui)
 
-    qt_standard_project_setup()
+set_target_properties(calculator PROPERTIES
+    WIN32_EXECUTABLE ON
+    MACOSX_BUNDLE ON
+)
 
-    qt_add_executable(calculator
-        mainwindow.ui
-        mainwindow.cpp
-        main.cpp
-    )
-    target_link_libraries(calculator PRIVATE Qt6::Widgets Qt6::Core Qt6::Gui)
-
-    set_target_properties(calculator PROPERTIES
-        WIN32_EXECUTABLE ON
-        MACOSX_BUNDLE ON
-    )
-
+if(WIN32)
     add_custom_command(TARGET calculator POST_BUILD 
         COMMAND Qt6::windeployqt
         ARGS $<TARGET_FILE:calculator>
