--- a/ch_qt/progress_bar/CMakeLists.txt
+++ b/ch_qt/progress_bar/CMakeLists.txt
@@ -7,34 +7,24 @@ set(CMAKE_AUTOUIC ON)
 
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 
-if (LINUX)
-    find_package(Qt5 COMPONENTS Widgets REQUIRED)
+find_package(Qt6 REQUIRED COMPONENTS Core Widgets Gui)
 
-    add_executable(sliders_spin
-        mainwindow.h
-        mainwindow.cpp
-        main.cpp
-    )
+qt_standard_project_setup()
 
-    target_link_libraries(progress_bar PRIVATE Qt5::Widgets Qt5::Core Qt5::Gui)
-else()
-    find_package(Qt6 REQUIRED COMPONENTS Core Widgets Gui)
+add_executable(progress_bar
+    mainwindow.h
+    mainwindow.cpp
+    main.cpp
+)
+target_include_directories(progress_bar PRIVATE ${EXPRTK_INCLUDE_DIRS})
+target_link_libraries(progress_bar PRIVATE Qt6::Widgets Qt6::Core Qt6::Gui)
 
-    qt_standard_project_setup()
+set_target_properties(progress_bar PROPERTIES
+    WIN32_EXECUTABLE ON
+    MACOSX_BUNDLE ON
+)
 
-    add_executable(progress_bar
-        mainwindow.h
-        mainwindow.cpp
-        main.cpp
-    )
-    target_include_directories(progress_bar PRIVATE ${EXPRTK_INCLUDE_DIRS})
-    target_link_libraries(progress_bar PRIVATE Qt6::Widgets Qt6::Core Qt6::Gui)
-
-    set_target_properties(progress_bar PROPERTIES
-        WIN32_EXECUTABLE ON
-        MACOSX_BUNDLE ON
-    )
-
+if(WIN32)
     add_custom_command(TARGET progress_bar POST_BUILD 
         COMMAND Qt6::windeployqt
         ARGS $<TARGET_FILE:progress_bar>
