--- a/ch_qt/qt_step3/CMakeLists.txt
+++ b/ch_qt/qt_step3/CMakeLists.txt
@@ -7,33 +7,23 @@ set(CMAKE_AUTOUIC ON)
 
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 
-if (LINUX)
-    find_package(Qt5 COMPONENTS Widgets REQUIRED)
+find_package(Qt6 REQUIRED COMPONENTS Core Widgets Gui)
 
-    add_executable(qt_step3
-        mainwindow.h
-        mainwindow.cpp
-        main.cpp
-    )
+qt_standard_project_setup()
 
-    target_link_libraries(qt_step3 PRIVATE Qt5::Widgets Qt5::Core Qt5::Gui)
-else()
-    find_package(Qt6 REQUIRED COMPONENTS Core Widgets Gui)
+add_executable(qt_step3
+    mainwindow.h
+    mainwindow.cpp
+    main.cpp
+)
+target_link_libraries(qt_step3 PRIVATE Qt6::Widgets Qt6::Core Qt6::Gui)
 
-    qt_standard_project_setup()
+set_target_properties(qt_step3 PROPERTIES
+    WIN32_EXECUTABLE ON
+    MACOSX_BUNDLE ON
+)
 
-    add_executable(qt_step3
-        mainwindow.h
-        mainwindow.cpp
-        main.cpp
-    )
-    target_link_libraries(qt_step3 PRIVATE Qt6::Widgets Qt6::Core Qt6::Gui)
-
-    set_target_properties(qt_step3 PROPERTIES
-        WIN32_EXECUTABLE ON
-        MACOSX_BUNDLE ON
-    )
-
+if(WIN32)
     add_custom_command(TARGET qt_step3 POST_BUILD 
         COMMAND Qt6::windeployqt
         ARGS $<TARGET_FILE:qt_step3>
