--- a/ch_qt/qt_step4/CMakeLists.txt
+++ b/ch_qt/qt_step4/CMakeLists.txt
@@ -7,40 +7,30 @@ set(CMAKE_AUTOUIC ON)
 
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 
-if (LINUX)
-    find_package(Qt5 COMPONENTS Widgets REQUIRED)
+find_package(Qt6 REQUIRED COMPONENTS Core Widgets Gui)
+find_path(EXPRTK_INCLUDE_DIRS "exprtk.hpp")
 
-    add_executable(qt_step4
-        mainwindow.h
-        mainwindow.cpp
-        main.cpp
-    )
+qt_standard_project_setup()
 
-    target_link_libraries(qt_step4 PRIVATE Qt5::Widgets Qt5::Core Qt5::Gui)
-else()
-    find_package(Qt6 REQUIRED COMPONENTS Core Widgets Gui)
-    find_path(EXPRTK_INCLUDE_DIRS "exprtk.hpp")
-
-    qt_standard_project_setup()
-
-    add_executable(qt_step4
-        mainwindow.h
-        mainwindow.cpp
-        main.cpp
-    )
-    if (MSVC)
-        target_compile_options(qt_step4 PRIVATE /bigobj)
-    endif()
-    target_include_directories(qt_step4 PRIVATE ${EXPRTK_INCLUDE_DIRS})
-    target_link_libraries(qt_step4 PRIVATE Qt6::Widgets Qt6::Core Qt6::Gui)
+add_executable(qt_step4
+    mainwindow.h
+    mainwindow.cpp
+    main.cpp
+)
+if (MSVC)
+    target_compile_options(qt_step4 PRIVATE /bigobj)
+endif()
+target_include_directories(qt_step4 PRIVATE ${EXPRTK_INCLUDE_DIRS})
+target_link_libraries(qt_step4 PRIVATE Qt6::Widgets Qt6::Core Qt6::Gui)
 
 
 
-    set_target_properties(qt_step4 PROPERTIES
-        WIN32_EXECUTABLE ON
-        MACOSX_BUNDLE ON
-    )
+set_target_properties(qt_step4 PROPERTIES
+    WIN32_EXECUTABLE ON
+    MACOSX_BUNDLE ON
+)
 
+if(WIN32)
     add_custom_command(TARGET qt_step4 POST_BUILD 
         COMMAND Qt6::windeployqt
         ARGS $<TARGET_FILE:qt_step4>
